--- a/.gitattributes
+++ b/.gitattributes
@@ -1,6 +1,8 @@
 *.css linguist-detectable=false
+*.scss linguist-detectable=false
 *.java linguist-detectable=false
 *.python linguist-detectable=true
 *.js linguist-detectable=false
 *.html linguist-detectable=false
 *.xml linguist-detectable=false
+*.ipynb linguist-detectable=false
